--- a/src/app/shared/aboutus/aboutus.component.html
+++ b/src/app/shared/aboutus/aboutus.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card [@fallIn]='state'>
     <mat-card-title>
       Test about us page!
     </mat-card-title>
@@ -10,4 +10,4 @@
         aboutus works!
       </p>
     </mat-card-content>
-  <mat-card
+</mat-card>
