--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,14 @@
-<p>header works!</p>
+<mat-card [@fallIn]='state'>
+    <mat-card-title>
+      Test header page!
+    </mat-card-title>
+    <mat-card-content>
+      <button routerLink="/aboutus">goto aboutus</button>
+      <button routerLink="/footer">goto footer</button>
+      <br/>
+      <p>
+        Header works!
+      </p>
+    </mat-card-content>
+</mat-card>
+  
