--- a/src/app/shared/aboutus/aboutus.component.html
+++ b/src/app/shared/aboutus/aboutus.component.html
@@ -1,10 +1,14 @@
+<header 
+pageTitle="About Us" 
+iconTitle="info"
+helpTitle="aboutuspagehelp"
+></header>
 <mat-card [@fallIn]='state'>
     <mat-card-title>
-      Test about us page!
+      About us page!
     </mat-card-title>
     <mat-card-content>
-      <button routerLink="/header">goto header</button>
-      <button routerLink="/footer">goto footer</button>
+      <button routerLink="/settings">goto Settings</button>
       <br/>
       <p>
         aboutus works!
