--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,13 +1,1 @@
-<mat-card [@fallIn]='state'>
-    <mat-card-title>
-      Test footer page!
-    </mat-card-title>
-    <mat-card-content>
-      <button routerLink="/aboutus">goto aboutus</button>
-      <button routerLink="/header">goto header</button>
-      <br/>
-      <p>
-        footer works!
-      </p>
-    </mat-card-content>
-</mat-card>
+Footer!
