--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,14 +1,38 @@
-<mat-card [@fallIn]='state'>
-    <mat-card-title>
-      Test header page!
-    </mat-card-title>
-    <mat-card-content>
-      <button routerLink="/aboutus">goto aboutus</button>
-      <button routerLink="/footer">goto footer</button>
-      <br/>
-      <p>
-        Header works!
-      </p>
-    </mat-card-content>
-</mat-card>
+<mat-toolbar>
+  <button mat-mini-fab color="primary" [matMenuTriggerFor]="navMenu">
+    <mat-icon>dashboard</mat-icon>
+  </button>
+  <span class="example-icon"></span>
+  <mat-icon>{{iconTitle}}</mat-icon>
+  <span class="example-icon"></span>
+  {{pageTitle}}
+  <span class="example-spacer"></span>
+  <mat-icon [color]="userStatusColor">account_box</mat-icon>
+  <span class="example-icon"></span>
+  <mat-icon matBadge="{{counter}}" matBadgePosition="after" matBadgeColor="primary">shopping_cart</mat-icon>
+  <span class="example-icon"></span>
+  <mat-icon [matMenuTriggerFor]="helpMenu">help</mat-icon>
+  <span class="example-icon"></span>
+  <mat-icon>settings</mat-icon>
+
+  <mat-menu #helpMenu="matMenu">
+    <div *ngIf="helpTitle=='settingspagehelp'">
+      This is Settings page help.
+    </div>
+    <div *ngIf="helpTitle=='aboutuspagehelp'">
+      This is About us page help.
+    </div>
+    {{helpTitle}}
+  </mat-menu>
+
+  <mat-menu #navMenu="matMenu">
+    <a href="{{configData.fblink}}" target="_blank"><button mat-menu-item><mat-icon svgIcon="fb"></mat-icon>Facebook</button></a>
+    <a href="{{configData.github}}" target="_blank"><button mat-menu-item><mat-icon svgIcon="git"></mat-icon>GitHub</button></a>
+    <a href="{{configData.linkedin}}" target="_blank"><button mat-menu-item><mat-icon svgIcon="linkedin"></mat-icon>LinkedIn</button></a>
+    <button mat-menu-item routerLink="/aboutus"><mat-icon>info</mat-icon>About us</button>
+    <button mat-menu-item routerLink="/settings"><mat-icon>settings</mat-icon>Settings</button>
+  </mat-menu>
+
+</mat-toolbar>
+
   
