--- a/src/app/shared/aboutus/aboutus.component.html
+++ b/src/app/shared/aboutus/aboutus.component.html
@@ -3,15 +3,11 @@ pageTitle="About Us"
 iconTitle="info"
 helpTitle="aboutuspagehelp"
 ></header>
-<mat-card [@fallIn]='state'>
-    <mat-card-title>
-      About us page!
-    </mat-card-title>
-    <mat-card-content>
-      <button routerLink="/settings">goto Settings</button>
-      <br/>
-      <p>
-        aboutus works!
-      </p>
-    </mat-card-content>
-</mat-card>
+
+<mat-tab-group>
+  <mat-tab label="Manage"> Content 1 </mat-tab>
+  <mat-tab label="Aboutus"> Content 2 </mat-tab>
+  <mat-tab label="FAQ"> Content 3 </mat-tab>
+  <mat-tab label="Pro"> Content 4 </mat-tab>
+  <mat-tab label="Terms"> Content 5 </mat-tab>
+</mat-tab-group>
