--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,14 +1,7 @@
-<header 
-pageTitle="Settings" 
-iconTitle="settings"
-helpTitle="settingspagehelp"
-></header>
-<mat-card>
-    <mat-card-title>
-      Settings page!
-    </mat-card-title>
-    <mat-card-content>
-      <button routerLink="/aboutus">goto aboutus</button>
-      <br/>
-    </mat-card-content>
-</mat-card>
+<header pageTitle="Settings" iconTitle="settings" helpTitle="Settingspagehelp"></header>
+<mat-tab-group>
+    <mat-tab label="Info"><user></user></mat-tab>
+    <mat-tab label="Carts"><carts></carts></mat-tab>
+    <mat-tab label="Orders"><orders></orders>></mat-tab>
+</mat-tab-group>
+  
