fixed the thing

--- a/src/app/admin/setproduct/setproduct.component.html
+++ b/src/app/admin/setproduct/setproduct.component.html
@@ -1,4 +1,4 @@
-<header pageTitle="Set Products" iconTitle="settings" helpTitle="aboutuspagehelp"></header>
+<!--<header pageTitle="Set Products" iconTitle="settings" helpTitle="aboutuspagehelp"></header>-->
 
 <mat-card>
     <mat-card-content>
