--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -30,7 +30,7 @@
     <a href="{{configData.github}}" target="_blank"><button mat-menu-item><mat-icon svgIcon="git"></mat-icon>GitHub</button></a>
     <a href="{{configData.linkedin}}" target="_blank"><button mat-menu-item><mat-icon svgIcon="linkedin"></mat-icon>LinkedIn</button></a>
     <button mat-menu-item routerLink="/aboutus"><mat-icon>info</mat-icon>About us</button>
-    <button mat-menu-item routerLink="/setproduct"><mat-icon>settings</mat-icon>Settings</button>
+    <button mat-menu-item routerLink="/admin"><mat-icon>settings</mat-icon>Settings</button>
   </mat-menu>
 
 </mat-toolbar>
