--- a/src/app/admin/admintab/admintab.component.html
+++ b/src/app/admin/admintab/admintab.component.html
@@ -2,6 +2,6 @@
 <mat-tab-group>
     <mat-tab label="users"><adminusers></adminusers></mat-tab>
     <mat-tab label="products"><app-setproduct></app-setproduct></mat-tab>
-    <mat-tab label="carts"><admincarts></admincarts>></mat-tab>
-    <mat-tab label="orders"><adminorders></adminorders>></mat-tab>
+    <mat-tab label="carts"><admincarts></admincarts></mat-tab>
+    <mat-tab label="orders"><adminorders></adminorders></mat-tab>
 </mat-tab-group>
