fixed some stuff

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -33,7 +33,7 @@
     <button mat-menu-item routerLink="/setproduct"><mat-icon>settings</mat-icon>Settings</button>-->
     <button mat-menu-item routerLink="/product"><mat-icon>shop</mat-icon>Shop</button>
     <button mat-menu-item routerLink="/aboutus"><mat-icon>info</mat-icon>About us</button>
-    <button mat-menu-item routerLink="/admin"><mat-icon>settings</mat-icon>Settings</button>
+    <button mat-menu-item routerLink="/admin"><mat-icon>settings</mat-icon>admin</button>
   </mat-menu>
 
 </mat-toolbar>
