--- a/src/app/admin/admintab/admintab.component.html
+++ b/src/app/admin/admintab/admintab.component.html
@@ -1,4 +1,4 @@
-<header pageTitle="Admin" iconTitle="settings" helpTitle="aboutuspagehelp"></header>
+<header pageTitle="Admin" iconTitle="settings_applications" helpTitle="aboutuspagehelp"></header>
 <mat-tab-group>
     <mat-tab label="users"><adminusers></adminusers></mat-tab>
     <mat-tab label="products"><app-setproduct></app-setproduct></mat-tab>
