--- a/src/app/shared/aboutus/aboutus.component.html
+++ b/src/app/shared/aboutus/aboutus.component.html
@@ -4,10 +4,14 @@ iconTitle="info"
 helpTitle="aboutuspagehelp"
 ></header>
 
-<mat-tab-group>
+<mat-card>
+  About us page
+</mat-card>
+<!--
+<mat-tab-group> 
   <mat-tab label="Manage"> Content 1 </mat-tab>
   <mat-tab label="Aboutus"> Content 2 </mat-tab>
   <mat-tab label="FAQ"> Content 3 </mat-tab>
   <mat-tab label="Pro"> Content 4 </mat-tab>
   <mat-tab label="Terms"> Content 5 </mat-tab>
-</mat-tab-group>
+</mat-tab-group>-->
