--- a/src/app/admin/setproduct/setproduct.component.html
+++ b/src/app/admin/setproduct/setproduct.component.html
@@ -79,7 +79,7 @@
             </mat-form-field>
             <br>
             <mat-form-field>
-                <textarea matInput placeholder="*IMP*: Search use Tags Text" name="tags" id="tags" ngModel required
+                <textarea matInput placeholder="Tags" name="tags" id="tags" ngModel required
                     minlength="1"></textarea>
                 <mat-hint align="end">eg. PC, Text eidtor, Online</mat-hint>
             </mat-form-field>
