--- a/src/app/user/product/product.component.html
+++ b/src/app/user/product/product.component.html
@@ -52,6 +52,7 @@
         <span class="med-spacer"></span>
         <button [disabled]="counter < 1" mat-raised-button color="primary" (click)="addToCart(myDocData, counter)">Add to Cart</button>
         <br />
-        <img [src]="profileUrl | async" width="300" height="300"/>
+        <img src="./../../../assets/adobe-photoshop-cc.jpg" width="300" height="300">
+        <!--<img [src]="profileUrl | async" width="300" height="300"/>-->
     </ng-template>
 </mat-card>
