as close as i will get
still missing admin auth

--- a/src/app/admin/setproduct/setproduct.component.html
+++ b/src/app/admin/setproduct/setproduct.component.html
@@ -183,7 +183,8 @@
         <span matTooltip="Search All">
             <mat-icon color="primary" (click)="toggle('searchMode')">search</mat-icon><!--possible error!-->
         </span>
-    </mat-card-actions><!--
+    </mat-card-actions>
+
     <div *ngIf="takeHostSelfie" width="300">
         <button type="reset" (click)="takeHostSelfie=false;" mat-icon-button color="primary">
             <mat-icon>clear</mat-icon>
@@ -198,7 +199,7 @@
         <br>
         <img [src]="profileUrl | async" width="300" height="300" />
         <br>
-    </div>-->
+    </div>
 
     <div class="example-header">
         <mat-form-field>
